cambiando medidas de longo en manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,10 +5,10 @@
     {
       "src": "/images/logo.png",
       "type": "image/png",
-      "sizes": "1024x1024"
+      "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "./index.html?source=pwa",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
