--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,14 @@
     {
       "src": "/images/logo.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "192x192",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/images/logo.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
   "start_url": "./index.html?source=pwa",
